<resources>
    <string name="app_name">Recipe Finder</string>
    <string name="Sign_In">Sign-In</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">sample@domain.com</string>
    <string name="pass">password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="incorrect">Incorrect email or password</string>
    <string name="create_email">Email</string>
    <string name="create_pass">Password</string>
    <string name="re_pass">Re-enter password</string>
    <string name="reg">Register</string>
    <string name="have_account">Already have an Account?</string>
    <string name="title_activity_login">login</string>
    <string name="reset">Recover Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="retrieve">Retrieve Password</string>

    <string name="userProf">User Profile</string>
    <string name="rec">Recipes</string>
    <string name="saved">Saved Recipes</string>
    <string name="plan">7 Day Planner</string>
    <string name="track">Health Tracker </string>
    <string name="Group">Group Meal Planner</string>
    <string name="Help">Help and Support</string>
    <string name="logout">Log Out</string>
    <string name="out_prompt">Are you sure you want to log out?</string>
    <string name="title_activity_main_menu">MainMenu</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="textview">TextView</string>
    <string name="userprofile">userProfile</string>
    <string name="alancooper_domain_com">alanCooper@domain.com</string>
    <string name="update_info">Update Info</string>
    <string name="_12_4_1991">12/4/1991</string>
    <string name="_172_cm">172 cm</string>
    <string name="_67_kg">67 Kg</string>
    <string name="alan_cooper">Alan Cooper</string>
    <string name="birthdate">Birthdate</string>
    <string name="dietry_restrictions">Dietary Restrictions</string>
    <string name="eggs">No Eggs</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="milk">No Milk</string>
    <string name="peanuts">No Peanuts</string>
    <string name="serves">Serves</string>
    <string name="vegan">Vegan</string>
    <string name="weight">Weight</string>
    <string name="profile">Profile</string>

    <string name="Add">+</string>
    <string name="date1">2017/2/21</string>
    <string name="date2">2017/2/22</string>
    <string name="date3">2017/2/23</string>
    <string name="date4">2017/2/24</string>
    <string name="date5">2017/2/25</string>
    <string name="date6">2017/2/26</string>
    <string name="date7">2017/2/27</string>

    <string name="from">From Alan Cooper</string>
    <string name="subject">Subject: what would you like for dinner?</string>
    <string name="Garlic">Garlic Chicken</string>
    <string name="Penne">Penne Chicken with Spring Vegetables</string>
    <string name="Curry">Curry Chicken</string>
    <string name="submit">Submit</string>


    <string name="follow">Experiencing problems with th app? You may find these FAQs pretty useful. Just follow the link below</string>
    <string name="site">http://www.recipefinder.com/FAQs/</string>
    <string name="exp">We would love to hear from you! Please share your experience with us your at</string>
    <string name="feedback">recipefinder@seng310phase3.com</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="response">Your Feedback Matters</string>
    <string name="follow_us">Follow Us</string>
    <string name="socail">Follow us on Social Media and get the latest updates before anyone else!</string>
    <string name="summary">Summary</string>
    <string name="essentail">Check out how much and which essential nutrients your body took in last 2 weeks.</string>
    <string name="budget">Budget</string>
    <string name="max">max</string>
    <string name="difficulty">Difficulty</string>
    <string name="dollar">$</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="calories">Max Calories</string>
    <string name="a_z">A-Z</string>
    <string name="sel_rec">Selected Recipe</string>
    <string-array name="serves_list">
        <item>1 Person</item>
        <item>2 to 4 People</item>
        <item>5 to 8 People</item>
        <item>8 or more People</item>
    </string-array>

    <string-array name="ethni_list">
        <item>Asian</item>
        <item>American</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Mexican</item>
        <item>Chinese</item>
    </string-array>

    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="nutrients">
        <item>Protein Intake - Medium</item>
        <item>Carbs Intake - Low</item>
        <item>Sodium Intake - Low</item>
        <item>Vitamin A Intake - Medium</item>
        <item>Vitamin C Intake - High</item>
        <item>Vitamin D Intake - Low</item>
        <item>Fats Intake - High</item>
        <item>Saturated Fats Intake - Medium</item>
        <item>Potassium Intake - Medium</item>
    </string-array>
</resources>
