<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/userProf" />
        <item
            android:id="@+id/nav_rec"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/rec" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/saved" />
        <item
            android:id="@+id/nav_7plan"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/plan" />
        <item
            android:id="@+id/nav_track"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/track" />
        <item
            android:id="@+id/nav_group_plan"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Group" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/logout" />
    </group>

</menu>
