<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">



    <item
        android:id="@+id/bt_info"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"
        android:title="@string/userProf">
    </item>
    <item
        android:id="@+id/bt_rec"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"
        android:title="@string/rec">
    </item>
    <item
        android:id="@+id/bt_saved"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"
        android:title="@string/saved">
    </item>
    <item
        android:id="@+id/bt_7plan"
        app:showAsAction="never"
        android:title="@string/plan">
    </item>
    <item
        android:id="@+id/bt_track"
        app:showAsAction="never"
        android:title="@string/track">
    </item>
    <item
        android:id="@+id/bt_groupplan"
        app:showAsAction="never"
        android:title="@string/Group">
    </item>
    <item
        android:id="@+id/bt_help"
        app:showAsAction="never"
        android:title="@string/Help">
    </item>
    <item
        android:id="@+id/bt_logout"
        app:showAsAction="never"
        android:title="@string/logout">
    </item>
</menu>