<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.phase3.recipe.Create">

    <TextView
        android:id="@+id/create_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:fontFamily="casual"
        android:text="@string/create_account"
        android:textAppearance="@style/TextAppearance.Design.Counter"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_header"
        android:layout_alignStart="@+id/create_header"
        android:layout_below="@+id/create_header"
        android:layout_marginTop="39dp"
        android:fontFamily="casual"
        android:text="@string/create_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/enter_email"
        android:layout_below="@+id/email_prompt"
        android:layout_alignLeft="@+id/email_prompt"
        android:layout_alignStart="@+id/email_prompt"
        android:layout_alignRight="@+id/create_header"
        android:layout_alignEnd="@+id/create_header" />

    <TextView
        android:id="@+id/pass_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enter_email"
        android:layout_alignStart="@+id/enter_email"
        android:layout_below="@+id/enter_email"
        android:layout_marginTop="12dp"
        android:fontFamily="casual"
        android:text="@string/create_pass" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/enter_pass"
        android:layout_below="@+id/pass_prompt"
        android:layout_alignLeft="@+id/pass_prompt"
        android:layout_alignStart="@+id/pass_prompt"
        android:layout_alignRight="@+id/enter_email"
        android:layout_alignEnd="@+id/enter_email" />

    <TextView
        android:id="@+id/pass_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enter_pass"
        android:layout_alignStart="@+id/enter_pass"
        android:layout_below="@+id/enter_pass"
        android:layout_marginTop="13dp"
        android:fontFamily="casual"
        android:text="@string/re_pass" />

    <EditText
        android:id="@+id/check_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/enter_pass"
        android:layout_alignLeft="@+id/pass_check"
        android:layout_alignRight="@+id/enter_pass"
        android:layout_alignStart="@+id/pass_check"
        android:layout_below="@+id/pass_check"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/user_exists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/have_account"
        android:layout_below="@+id/bt_reg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp" />

    <Button
        android:id="@+id/bt_return_start"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:fontFamily="casual"
        android:text="@string/Sign_In"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_below="@+id/user_exists"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/bt_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="casual"
        android:text="@string/reg"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_below="@+id/check_pass"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
